# Al-Hillan

./: .env.example  .vercelignore  database.db  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
api/: README.md  pyproject.toml  requirements.txt  test.py  vercel.json
api/app/: database.db  database.py  dependencies.py  main.py
api/app/core/: auth_dependencies.py  config.py  exceptions.py  lifespan.py  middleware.py  models.py
api/app/modules/: __init__.py  api_routes.py
api/app/modules/auth/: models.py  routes.py  security.py  services.py  utils.py
api/app/modules/courses/: models.py  routes.py  services.py
api/app/modules/payments/: models.py  routes.py  services.py
api/app/modules/public/: routes.py
api/app/modules/registers/: models.py  routes.py  services.py
api/app/modules/students/: models.py  routes.py  services.py
api/app/modules/users/: models.py  routes.py  services.py
api/migrations/: env.py
api/migrations/versions/: d45cbf355ca3_test.py
src/: middleware.ts
src/app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/(public)/: layout.tsx  page.tsx
src/app/contacts/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/components/: loader.tsx  nav-link.tsx  user-context.tsx
src/components/charts/: app-area-chart.tsx  app-bar-chart.tsx  app-line-chart.tsx  (+1 more)
src/hooks/: use-appearance.tsx  use-geo-location.tsx
src/layouts/: edit-user.tsx
src/lib/: actions.ts  cookies.ts  export.ts  formatters.ts  utils.ts  youtube.ts
(+105 files in other folders)
